# splinter-proxy

./: .gitignore  Cargo.toml  README.md  README.txt  fluids.json  game_events.json  rustfmt.toml  start.sh
mcserver/: eula.txt  server.properties
scripts/: setup.rs
src/: chat.rs  client.rs  commands.rs  config.rs  connection.rs  current.rs  eidautoremoval.rs  events.rs  init.rs  keepalive.rs  lib.rs  logging.rs  main.rs  main2.rs  mapping.rs  proto.rs  proxy.rs  server.rs  state.rs  zoning.rs
src/commands/: kick.rs  list.rs  mod.rs  stop.rs  switch.rs
src/mapping/: eid.rs  mod.rs  uuid.rs
src/protocol/: current.rs  events.rs  login.rs  mod.rs  plugin.rs  v755.rs  version.rs
src/protocol/v753/: chat.rs  eid.rs  keepalive.rs  login.rs  mod.rs  tags.rs  uuid.rs
src/protocol/v755/: chat.rs  eid.rs  keepalive.rs  login.rs  mod.rs  tags.rs  uuid.rs
src/protocol/v_cur/: chat.rs  chunk.rs  eid.rs  keepalive.rs  login.rs  mod.rs  sync.rs  tags.rs  uuid.rs
src/proxy/: chat.rs  client.rs  config.rs  logging.rs  mod.rs  server.rs
src/systems/: eidautoremoval.rs  keepalive.rs  mod.rs  playersave.rs  zoning.rs
src/systems/commands/: kick.rs  list.rs  mod.rs  stop.rs  switch.rs
