[package]
name = "splinter-proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcproto-rs = "0.2.0"
craftio-rs = { version = "0.1.0", features = ["compression"] }
rand = "0.8.3"
lazy_static = "1.4.0"
log = "0.4.14"
simplelog = "0.10.0"
ron = "0.6.4"
serde = "1.0.125"

