[package]
name = "splinter-proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcproto-rs = { git = "https://github.com/regenerativep/mcproto-rs", rev = "c76a1c67c5fd91bbd78b9c46471160321ca12af0" }
#mcproto-rs = { path = "../mcproto-rs" }
craftio-rs = { version = "0.1.0", features = ["compression"] }
rand = "0.8"
lazy_static = "1.4"
log = "0.4"
simplelog = "0.10"
ron = "0.7"
serde = "1.0"
json = "0.12"
bimap = "0.6"
md5 = "0.7"
smol = "1.2"
anyhow = "1.0"
async-compat = "0.2"
async-dup = "1.2"
inventory = "0.1"
blocking = "1.0"
futures-lite = "1.12"
arc-swap = "1.4"
chrono = "0.4"
smallvec = { version = "1.7", features = ["union"] }

[patch.crates-io]
mcproto-rs = { git = "https://github.com/regenerativep/mcproto-rs", rev = "c76a1c67c5fd91bbd78b9c46471160321ca12af0" }
#mcproto-rs = { path = "../mcproto-rs" }
